<resources>
    <string name="app_name">Carros5ed</string>

    <!-- A -->
    <string name="action_about">Sobre</string>
    <string name="action_settings">Settings</string>
    <string name="about_dialog_text">
<![CDATA[
<b>Aplicativo dos Carros 2015</b><br>
Versao %s<br><br>
<a href="http://www.livroandroid.com.br">http://livroandroid.com.br</a><br><br>
<a href="http://www.facebook.com/ricardolecheta">http://facebook.com/ricardolecheta</a><br><br>
<a href="https://plus.google.com/+RicardoLecheta">https://plus.google.com/+RicardoLecheta</a>
	]]>
	</string>
    <string name="about_dialog_title">Livro Android</string>
    <string name="action_video_browser">Browser</string>
    <string name="action_video_player">Video Player</string>
    <string name="action_video_videoview">VideoView</string>
    <string name="Atualizar">Atualizar</string>

    <!-- C -->
    <string name="carros">Carros</string>
    <string name="configuracoes">Configurações</string>
    <string name="classicos">Clássicos</string>

    <!-- D -->
    <string name="descricao">Descrição</string>

    <!-- E -->
    <string name="esportivos">Esportivos</string>
    <string name="editar">Editar</string>
    <string name="excluir">Excluir</string>

    <!-- L -->
    <string name="luxo">Luxo</string>
    <string name="latitudeLongitude">Lat / Lng</string>

    <!-- M -->
    <string name="mapa">Mapa</string>
    <string name="msg_alerta_permissao">Para utilizar este aplicativo, você precisa aceitar as permissões.</string>
    <string name="msg_error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-Fi ou 3G.</string>
    <!-- menu_frag_mapa.xml -->
    <string name="mapa_normal">Modo Normal</string>
    <string name="mapa_satelite">Modo Satélite</string>
    <string name="mapa_terreno">Modo Terreno</string>
    <string name="mapa_hibrido">Modo Híbrido</string>
    <string name="mapa_location_directions">Direções</string>
    <string name="mapa_location_carro">Localização do Carro</string>
    <string name="mapa_zoom_in">Zoom (+)</string>
    <string name="mapa_zoom_out">Zoom (-)</string>


    <!-- N -->
    <string name="nav_drawer_username">Ricardo R Lecheta</string>
    <string name="nav_drawer_email">livroandroid@gmail.com</string>
    <string name="nome">Nome</string>

    <!-- O -->
    <string name="ok">OK</string>

    <!-- S -->
    <string name="share">Share</string>
    <string name="sobre">Sobre</string>
    <string name="site_do_livro">Site do Livro</string>

    <!-- V -->
    <string name="vazio" />
    <string name="video">Vídeo</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>




</resources>
